* Functions 'warn()' and 'die()' logged to debug logs (Erik H)
* Removed need for 'tempdir' and associated configuration option (Nick P)
* Removed numerous unused configuration options (Nick P)
* Specific output formats can be disabled in configuration (Yves L)
* Respect smtpuser and smtppass configuration options (Nick P)

Performance
* PSGI responses no longer written to file but kept in memory (Erik H/Yves L)

Rewritten inventory tracking and adjustments
* Removed the need for the ill-understood 'Inventory Entity' (Erik H)
* Inventory adjustments GL transactions instead of dummy invoices (Erik H)
* SQL & in-browser(BDD) tests (Erik H)

Code cleanup
* Removed code duplication in
  - Template handling framework (Yves L)
* Remove unused variables and unreachable code (Nick P)
* Remove fragments of REST framework never fully implemented (Erik H)
* Authentication handling centralized in request dispatch code (Erik H)
* Cleaned up handling of uploaded files in request handling (Erik H)
* Moved to Plack::Request (from CGI::Simple & LedgerSMB) (Erik H)
* Template format plugin cleanup and refactoring (Erik H/Nick P)
* Template handling code cleanup (Erik H/Nick P)
* Unreferenced UI templates deleted (Erik H)
* Centralized and more robust entry point for code in old/ (Erik H)
* Merge of SQL-Ledger 2.8 and 3.0 migration code; improved consistency (Yves L)
* Improved cleanup of temp files and dirs after use (Erik H)
* Improved HTML structure (balanced closing/opening tags, etc) (Yves L)
* Factored HTTP response responsibility out of LedgerSMB::Template (Erik H)
* Moved request pre- and post-processing into custom Plack Middlewares (Erik H)

Quality assurance
* Port testing of database routines to pgTAP (and Perl's 'prove') (Yves L)
* Enforce numerous Perl::Critic policies with code cleanup (Nick P/Rob R)
* Add tests for all template output formats (Nick P)

Erik H is Erik Huelsmann
Yves L is Yves Lavoie
Nick P is Nick Prater
Rob R is Rob Ransbottom
David G is David Godfrey